NN LDPC prediction analysis

--- a/notebooks/LDPC.ipynb
+++ b/notebooks/LDPC.ipynb
@@ -592,16 +592,10 @@
     "exp_descr.append('LDPC train on 49152, test on 16384 random')                                          # Add legend\n",
     "\n",
     "for i in range(0,len(sigmas)):\n",
-    "\n",
-    "#     x_test = np.zeros((inputs_test.shape[0], N), dtype=bool)\n",
-    "#     u_test = np.zeros((d_test.shape[0], N), dtype=bool)\n",
-    "\n",
-    "#     u_test[:, log_vector] = d_test\n",
     "    for ii in range(0,codewords_test.shape[0]):\n",
     "\n",
     "        print(f'Decoding SNR: {i+1}/{len(sigmas)}, CW: {ii+1}/{codewords_test.shape[0]}   ', end=\"\\r\")\n",
-    "\n",
-    "#         x_test[ii] = polar_transform_iter(u_test[ii])\n",
+    "        \n",
     "        inputs_test_batch = np.tile(inputs_test[ii], (test_batch, 1))\n",
     "        codewords_test_batch = np.tile(codewords_test[ii], (test_batch, 1))\n",
     "\n",
@@ -1008,12 +1002,110 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7b0c56d-de4f-4581-b907-cf6a75097f3c",
+   "cell_type": "markdown",
+   "id": "643e4702-e1be-4e28-b765-9281b4e61dbd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analyse predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "cc296a48-2d15-4811-b88b-784888d1a0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CW:65535/65536\r"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = np.zeros((inputs_test.shape[0], k), dtype = bool)\n",
+    "# print(f'CW #,  predicted        |  inputs')\n",
+    "for i in range(0, codewords_test.shape[0]):\n",
+    "    s_test = -2*codewords_test[i] + 1\n",
+    "    y_test = s_test + sigmas[-1]*np.random.standard_normal(s_test.shape)\n",
+    "    predictions[i] = np.round(decoder.predict(np.reshape(y_test, (1, N)), batch_size=1))\n",
+    "#     print(f'CW:{i+inputs_train.shape[0]} {predictions[i].astype(int)} | {inputs_test[i].astype(int)}')\n",
+    "    print(f'CW:{i+inputs_train.shape[0]}/{codewords.shape[0]}', end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f3ae347e-f004-4b8e-9783-c723f5fd5fdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indicies of predicted codewords which exist in train set:\n",
+      "indicies: [49510 49560 49802 49933 50090 50369 50695 51176 51771 53180 53223 53694\n",
+      " 53793 54628 54993 55914 55968 56034 56469 56470 57146 57218 57259 57378\n",
+      " 57608 57993 58119 58519 58554 58572 58683 59177 59423 59494 59777 59843\n",
+      " 60125 60666 61332 61558 61628 61723 62013 62337 62860 63084 63295 63443\n",
+      " 63642 63919 64100 64167 64191 64407 64438 64720 65139 65496], shape: (58,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.array([], dtype=int)\n",
+    "for current_input in inputs_train:\n",
+    "    test = np.append(test, (np.where((predictions == current_input).all(axis=1))[0]+inputs_train.shape[0]))\n",
+    "print('indicies of predicted codewords which exist in train set:')\n",
+    "print(f'indicies: {np.sort(test)}, shape: {test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "f8bfc7e5-4981-4840-a65c-3f78f7b37a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indicies of predicted codewords which ARE NOT INCLUDED into train set:\n",
+      "indicies: [49152 49153 49154 ... 65533 65534 65535], shape: (16326,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.array([], dtype=int)\n",
+    "for current_input in inputs_test:\n",
+    "    test = np.append(test, (np.where((predictions == current_input).all(axis=1))[0]+inputs_train.shape[0]))\n",
+    "print('indicies of predicted codewords which ARE NOT INCLUDED into train set:')\n",
+    "print(f'indicies: {np.sort(test)}, shape: {test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "cfe8cc46-b48a-4436-8ffe-3106db343549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indicies of correctly predicted codewords, which WERE NOT INCLUDED into train set: 16310\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = np.array([], dtype=int)\n",
+    "for i in range(0, inputs_test.shape[0]):\n",
+    "    if ((predictions[i] == inputs_test[i]).all(axis=0)):\n",
+    "        test = np.append(test, (i+inputs_train.shape[0]))\n",
+    "#         print(i+inputs_train.shape[0])\n",
+    "print(f'Indicies of correctly predicted codewords, which WERE NOT INCLUDED into train set: {test.shape[0]}')"
+   ]
   }
  ],
  "metadata": {
